fixed findbugs warnings, small CRS cleanup